-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 6.0.0
-
None
-
-
02535d6bf8 (qt-creator/qt-creator/6.0) 02535d6bf8 (qt-creator/qt-creator/master) 02535d6bf8 (qt-creator/qt-creator/qmlprojectstorage) 02535d6bf8 (qt-creator/qt-creator/qds-3.0)
Select-all creates an unwanted scroll to the bottom of the page
Within the editor, the "select all" command (crtl-a) does select the text of the current file but systematically scrolls down the page.
This problem was not found with the previous version (qtcreator 5.0.3)
regards
For Gerrit Dashboard: QTCREATORBUG-26736 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
388337,2 | Editor: fix select all | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |